--- a/README.html
+++ b/README.html
@@ -171,7 +171,7 @@ pre code {
 <h2>Predicting the extinction risk of data-deficient species</h2>
 <p>Numerous species of the IUCN Red List of Threatened Species are classified as data-deficient. The provided code was used to predict threat intensities across data-deficient species of all spatial data available from <a href="https://www.iucnredlist.org/resources/spatial-data-download">IUCN</a>.</p>
 <p>Code for reproducing the results can be found in the folder workflow.</p>
-<p>The generated predictions are stored in <a href="https://github.com/jannebor/dd_forecast/raw/main/dd_predictions.csv">dd_predictions.csv</a>.</p>
+<p>The generated predictions are stored in <a href="https://github.com/jannebor/dd_forecast/blob/main/dd_predictions.csv">dd_predictions.csv</a> and show the probability of being threatened by extinction for each species:</p>
 <table>
 <thead>
 <tr class="header">
