--- a/README.html
+++ b/README.html
@@ -170,6 +170,7 @@ pre code {
 <div id="predicting-the-extinction-risk-of-data-deficient-species" class="section level2">
 <h2>Predicting the extinction risk of data-deficient species</h2>
 <p>Numerous species of the IUCN Red List of Threatened Species are classified as data-deficient. The provided code was used to predict threat intensities across data-deficient species of all spatial data available from <a href="https://www.iucnredlist.org/resources/spatial-data-download">IUCN</a>.</p>
+<p>The classifier can be applied for individual species on <a href="https://ml-extinctionrisk.indecol.no/">https://ml-extinctionrisk.indecol.no/</a>.</p>
 <p>Code for reproducing the results can be found in the folder workflow.</p>
 <p>The generated predictions are stored in <a href="https://github.com/jannebor/dd_forecast/blob/main/dd_predictions.csv">dd_predictions.csv</a> and show the probability of being threatened by extinction for each species:</p>
 <table>
@@ -244,6 +245,9 @@ pre code {
 </tr>
 </tbody>
 </table>
+<div id="workflow" class="section level3">
+<h3>Workflow</h3>
+</div>
 </div>
 
 
